--- a/src/ansible/requirements.txt
+++ b/src/ansible/requirements.txt
@@ -1,14 +1,14 @@
 Jinja2==2.10.1
 MarkupSafe==0.23
-PyYAML==3.11
-ansible==2.1.0.0
+PyYAML==4.2b1
+ansible==2.3.1.0
 argparse==1.2.1
 cffi==1.7.0
 cryptography==1.4
 enum34==1.1.6
 idna==2.1
 ipaddress==1.0.16
-paramiko==2.0.1
+paramiko==2.0.9
 pyasn1==0.1.9
 pycparser==2.14
 pycrypto==2.6.1
